--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ p {
 .abt_valutico {
   background-color: #111;
   color: #fff;
-  padding: 2rem;
+  padding: 5rem;
 }
 .abt_valutico h2 {
   font-size: 2rem;
@@ -122,7 +122,45 @@ p {
   font-weight: 400;
 }
 .col {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  /* margin: 1.5rem; */
+}
+.principles_col h4 {
+  margin-bottom: 1.5rem;
+  font-size: 1.5rem;
+}
+.valuation {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding: 4.5rem;
+}
+.text_valuation h3 {
+  font-size: 1.7rem;
+  font-weight: 800;
+  margin-bottom: 1rem;
+}
+#small {
+  font-size: 1rem;
+  font-weight: 600;
+}
+.valuation_rows {
+  margin: 0 0 1rem 2.5rem;
+}
+.valuation_rows h4 {
+  font-size: 1.5rem;
+  font-weight: 800;
+}
+.valuation_rows p {
+  font-size: 1rem;
+  font-weight: 600;
+}
+.valuation_img {
+  width: 100%;
+  padding-left: 5rem;
+  height: 1rem;
+}
+#btn {
+  text-align: center;
+  margin-bottom: 4.5rem;
 }
